# SIP-Processing

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md
src/applications/: control.cpp  core.cpp  media.cpp
src/components/control/: ControlInterface.cpp  ControlInterface.h
src/components/control/notifications/: CallClearedNotification.h  CallConnectedNotification.h  CallCountNotification.h  CallIncomingNotification.h  CallProgressNotification.h  CallRecordingCompletedNotification.h  CallRecordingStartedNotification.h  CallRingingNotification.h  CallStatisticsNotification.h  LoginNotification.h  Notification.hpp
src/components/control/requests/: CallAnswerRequest.h  CallClearRequest.h  CallCountRequest.h  CallInitiateRequest.h  CallProgressRequest.h  CallRecordRequest.h  CallRingRequest.h  LoginRequest.h  Request.cpp  Request.h
src/components/media/: MediaClientInterface.cpp  MediaClientInterface.h  MediaServerInterface.cpp  MediaServerInterface.h  definitions.h
src/components/media/data/: RtcpPacket.hpp  RtpPacket.hpp
src/components/media/messages/: MediaAllocateRequest.h  MediaAllocateResponse.h  MediaMessage.cpp  MediaMessage.h  MediaPlayStartRequest.h  MediaPlayStopRequest.h  MediaRecordStartRequest.h  MediaRecordStartResponse.h  MediaRecordStopRequest.h  MediaRecordStopResponse.h  MediaRegisterRequest.h  MediaRegisterResponse.h  MediaReleaseRequest.h  MediaReleaseResponse.h  MediaRequest.h  MediaResponse.h
src/components/media/resource/: AllocatedResource.cpp  AllocatedResource.h  Device.h  MediaResource.cpp  MediaResource.h  ResourceManager.cpp  ResourceManager.h
src/components/media/session/: MediaSession.cpp  MediaSession.h  MediaSessionManager.cpp  MediaSessionManager.h
src/components/sdp/: Sdp.cpp  Sdp.h  SdpAddrType.hpp  SdpAttribute.hpp  SdpAttributeLine.hpp  SdpAttributeType.hpp  SdpConnection.hpp  SdpConnectionLine.hpp  SdpFormat.hpp  SdpFormatType.hpp  SdpMedia.hpp  SdpMediaLine.hpp  SdpMediaType.hpp  SdpOrigin.hpp  SdpOriginLine.hpp  SdpProtocolType.hpp  SdpSession.hpp  SdpTiming.hpp  SdpVersion.hpp
src/components/sip/: SipConnection.hpp  SipDialogue.cpp  SipDialogue.h  SipDialogueManager.cpp  SipDialogueManager.h  SipInterface.cpp  SipInterface.h  SipParser.cpp  SipParser.h  SipTransaction.h
src/components/sip/events/: CallAnsweredEvent.h  CallClearedEvent.h  CallEvent.h  CallMediaErrorEvent.h  CallMediaRecordingStartedEvent.h  CallMediaRecordingStoppedEvent.h  CallMediaStatsEvent.h  CallNewCallEvent.h
src/components/sip/headers/: SipAcceptHeader.h  SipAllowEventsHeader.h  SipAllowHeader.h  SipAssertedIdentityHeader.h  SipCSeqHeader.h  SipCallIdHeader.h  SipContactHeader.h  SipContentDispositionHeader.h  SipContentEncodingHeader.h  SipContentLengthHeader.h  SipContentTypeHeader.h  SipDateHeader.h  SipEmptyHeader.h  SipExpiresHeader.h  SipExtendedHeader.h  SipFromHeader.h  SipHeader.cpp  SipHeader.h  SipMaxForwardsHeader.h  SipMimeVersionHeader.h  SipMinSeHeader.h  SipReasonHeader.h  SipRequireAfterHeader.h  SipRequireHeader.h  SipSubjectHeader.h  SipSupportedHeader.h  SipTimestampHeader.h  SipToHeader.h  SipUnsupportedHeader.h  SipUserAgentHeader.h  SipViaHeader.h
src/components/sip/messages/: SipAckRequest.h  SipByeRequest.h  SipCancelRequest.h  SipInviteRequest.cpp  SipInviteRequest.h  SipMessage.cpp  SipMessage.h  SipMessageBody.h  SipOkResponse.h  SipOptionsRequest.h  SipRequest.cpp  SipRequest.h  SipResponse.h  SipRingingResponse.h  SipSubscribeRequest.h  SipSystemUnavailableResponse.h  SipTryingResponse.h  SipUnknownRequest.h
src/components/utilities/: MessageBuffer.cpp  MessageBuffer.h  SocketClient.h  SocketServer.cpp  SocketServer.h  XmlDocument.cpp  XmlDocument.h  base64.cpp  base64.h  buffers.cpp  buffers.h  util.cpp  util.hpp
tests/: TestLogging.cpp  TestMappedBuffers.cpp  TestMessageBuffer.cpp  TestSdpClass.cpp  TestSessionManager.cpp  TestSipParsing.cpp  TestSocketServer.cpp  TestUtil.cpp  TestXmlDocumentClass.cpp
tests/data/: SipMessageSamples.hpp
tools/: RaiiLog.cpp  RaiiLog.h  UdpSend.cpp
